add wasm functionalities

--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -4,7 +4,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   overflow-x: hidden
-  background-color: #cfb0ff
+  background-color: #E6DF91
 
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",monospace
