--- a/client/src/components/styles/converter.module.sass
+++ b/client/src/components/styles/converter.module.sass
@@ -57,6 +57,45 @@
     border-radius: 10px
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.466)
     animation: fadeIn 1s ease-in
+  .buttonWrap
+    display: flex
+    flex-flow: wrap
+    justify-content: center
+    align-items: center
+    margin-top: 20px
+    .button
+      margin: 10px
+  .rangeInput
+    display: block
+    margin: auto
+    .slider
+      -webkit-appearance: none
+      margin: 0 10px
+      min-width: 300px
+      width: 300px
+      height: 13px
+      background: #ffffff
+      border-radius: 10px
+      outline: none
+      opacity: 0.7
+      -webkit-transition: .2s
+      transition: opacity .2s
+      &:hover
+        opacity: 1
+      &::-webkit-slider-thumb
+        -webkit-appearance: none
+        appearance: none
+        border-radius: 5px
+        width: 15px
+        height: 15px
+        background: rgba(68, 68, 68, 0.644)
+        cursor: pointer
+      &::-moz-range-thumb
+        border-radius: 5px
+        width: 15px
+        height: 15px
+        background: rgba(68, 68, 68, 0.644)
+        cursor: pointer
 
 @keyframes fadeIn
   0%
