better optimized modules, added rest of crop functionalities

--- a/client/src/components/styles/editor.module.sass
+++ b/client/src/components/styles/editor.module.sass
@@ -46,11 +46,10 @@
   .button:hover
     letter-spacing: 4px
   .alert
-    margin-left: auto
-    margin-right: auto
-    width: 50%
-    padding: 20px
-    background: #ec1b1b9a
+    margin: 10px auto
+    width: 30%
+    padding: 10px
+    background: #00000034
     color: #fff
     letter-spacing: 2px
     font-size: 13px
