--- a/client/src/components/styles/editor.module.sass
+++ b/client/src/components/styles/editor.module.sass
@@ -2,7 +2,7 @@
   text-align: center
   img
     max-width: 500px
-  h1
+  h1, h4
     color: rgba(0, 0, 0, 0.507)
     span
       font-size: 0.7em
