reworked component for testing on one thread

--- a/src/components/styles/editor.module.sass
+++ b/src/components/styles/editor.module.sass
@@ -105,3 +105,25 @@
 
 .resultBox
   padding-bottom: 20px
+
+.tableResults
+  margin: 25px auto
+  thead
+    font-weight: bold
+    td
+      padding: 5px
+      background-color: #00000015
+  tbody
+    tr
+      td
+        padding: 5px
+        background-color: #0000000a
+        .resultTime
+          margin: 5px
+        .resultSTD
+          font-size: 12px
+      .techTitle
+        padding: 5px 10px
+        background-color: #00000015
+        font-weight: bold
+        font-style: italic
