added styles to benchmark results, minor fixes

--- a/src/components/styles/switch.module.sass
+++ b/src/components/styles/switch.module.sass
@@ -1,6 +1,6 @@
 .switchContainer
   display: inline-grid
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
   width: 99.9vw
   height: 125px
   @media screen and (max-width: 300px)
