added calculating relative gains

--- a/src/components/styles/editor.module.sass
+++ b/src/components/styles/editor.module.sass
@@ -113,6 +113,11 @@
     td
       padding: 5px
       background-color: #00000015
+      .resultTime
+        margin: 0
+        font-size: 12px
+      .resultSTD
+        font-size: 10px
   tbody
     tr
       td
@@ -127,3 +132,11 @@
         background-color: #00000015
         font-weight: bold
         font-style: italic
+
+.picker
+  list-style-type: none
+  padding: 0
+  li
+    display: inline-block
+    float: center
+    margin: 0 5px
