added OptionSelector for choosing benchmark and video options

--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -18,7 +18,7 @@ main
   align-items: center
 
 .downloaderWrap
-  padding: 5% 20%
+  padding: 30px 20%
   @media screen and (max-width: 650px)
     padding: 10% 10% 5% 10%
   @media screen and (max-width: 400px)
