--- a/src/components/styles/editor.module.sass
+++ b/src/components/styles/editor.module.sass
@@ -6,6 +6,9 @@
     color: rgba(0, 0, 0, 0.507)
     span
       font-size: 0.7em
+  .description
+    font-size: 0.9em
+    color: rgba(0, 0, 0, 0.507)
   .box
     position: relative
     input
@@ -103,11 +106,3 @@
 
   100%
     opacity: 1
-
-.picker
-  list-style-type: none
-  padding: 0
-  li
-    display: inline-block
-    float: center
-    margin: 0 5px
